is-libzip-sys/src/docs_zip.rs

pub type zip_t = zip;
pub type zip_error_t = zip_error;
pub type zip_file_t = zip_file;
pub type zip_file_attributes_t = zip_file_attributes;
pub type zip_source_t = zip_source;
pub type zip_stat_t = zip_stat;
pub type zip_buffer_fragment_t = zip_buffer_fragment;
pub type zip_flags_t = zip_uint32_t;
pub type zip_source_callback = ::std::option::Option<
    unsafe extern "C" fn(
        arg1: *mut ::std::os::raw::c_void,
        arg2: *mut ::std::os::raw::c_void,
        arg3: zip_uint64_t,
        arg4: zip_source_cmd_t,
    ) -> zip_int64_t,
>;
pub type zip_progress_callback = ::std::option::Option<
    unsafe extern "C" fn(arg1: *mut zip_t, arg2: f64, arg3: *mut ::std::os::raw::c_void),
>;
pub type zip_cancel_callback = ::std::option::Option<
    unsafe extern "C" fn(
        arg1: *mut zip_t,
        arg2: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int,
>;
pub type zip_progress_callback_t = ::std::option::Option<unsafe extern "C" fn(arg1: f64)>;
extern "C" {
    pub fn zip_register_progress_callback(arg1: *mut zip_t, arg2: zip_progress_callback_t);
}
extern "C" {
    pub fn zip_add(
        arg1: *mut zip_t,
        arg2: *const ::std::os::raw::c_char,
        arg3: *mut zip_source_t,
    ) -> zip_int64_t;
}
extern "C" {
    pub fn zip_add_dir(arg1: *mut zip_t, arg2: *const ::std::os::raw::c_char) -> zip_int64_t;
}
extern "C" {
    pub fn zip_get_file_comment(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: *mut ::std::os::raw::c_int,
        arg4: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn zip_get_num_files(arg1: *mut zip_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_rename(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_replace(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: *mut zip_source_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_set_file_comment(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: *const ::std::os::raw::c_char,
        arg4: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_error_get_sys_type(arg1: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_error_get(
        arg1: *mut zip_t,
        arg2: *mut ::std::os::raw::c_int,
        arg3: *mut ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn zip_error_to_str(
        arg1: *mut ::std::os::raw::c_char,
        arg2: zip_uint64_t,
        arg3: ::std::os::raw::c_int,
        arg4: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_file_error_get(
        arg1: *mut zip_file_t,
        arg2: *mut ::std::os::raw::c_int,
        arg3: *mut ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn zip_close(arg1: *mut zip_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_delete(arg1: *mut zip_t, arg2: zip_uint64_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_dir_add(
        arg1: *mut zip_t,
        arg2: *const ::std::os::raw::c_char,
        arg3: zip_flags_t,
    ) -> zip_int64_t;
}
extern "C" {
    pub fn zip_discard(arg1: *mut zip_t);
}
extern "C" {
    pub fn zip_get_error(arg1: *mut zip_t) -> *mut zip_error_t;
}
extern "C" {
    pub fn zip_error_clear(arg1: *mut zip_t);
}
extern "C" {
    pub fn zip_error_code_zip(arg1: *const zip_error_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_error_code_system(arg1: *const zip_error_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_error_fini(arg1: *mut zip_error_t);
}
extern "C" {
    pub fn zip_error_init(arg1: *mut zip_error_t);
}
extern "C" {
    pub fn zip_error_init_with_code(arg1: *mut zip_error_t, arg2: ::std::os::raw::c_int);
}
extern "C" {
    pub fn zip_error_set(
        arg1: *mut zip_error_t,
        arg2: ::std::os::raw::c_int,
        arg3: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn zip_error_strerror(arg1: *mut zip_error_t) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn zip_error_system_type(arg1: *const zip_error_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_error_to_data(
        arg1: *const zip_error_t,
        arg2: *mut ::std::os::raw::c_void,
        arg3: zip_uint64_t,
    ) -> zip_int64_t;
}
extern "C" {
    pub fn zip_fclose(arg1: *mut zip_file_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_fdopen(
        arg1: ::std::os::raw::c_int,
        arg2: ::std::os::raw::c_int,
        arg3: *mut ::std::os::raw::c_int,
    ) -> *mut zip_t;
}
extern "C" {
    pub fn zip_file_add(
        arg1: *mut zip_t,
        arg2: *const ::std::os::raw::c_char,
        arg3: *mut zip_source_t,
        arg4: zip_flags_t,
    ) -> zip_int64_t;
}
extern "C" {
    pub fn zip_file_attributes_init(arg1: *mut zip_file_attributes_t);
}
extern "C" {
    pub fn zip_file_error_clear(arg1: *mut zip_file_t);
}
extern "C" {
    pub fn zip_file_extra_field_delete(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: zip_uint16_t,
        arg4: zip_flags_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_file_extra_field_delete_by_id(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: zip_uint16_t,
        arg4: zip_uint16_t,
        arg5: zip_flags_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_file_extra_field_set(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: zip_uint16_t,
        arg4: zip_uint16_t,
        arg5: *const zip_uint8_t,
        arg6: zip_uint16_t,
        arg7: zip_flags_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_file_extra_fields_count(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: zip_flags_t,
    ) -> zip_int16_t;
}
extern "C" {
    pub fn zip_file_extra_fields_count_by_id(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: zip_uint16_t,
        arg4: zip_flags_t,
    ) -> zip_int16_t;
}
extern "C" {
    pub fn zip_file_extra_field_get(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: zip_uint16_t,
        arg4: *mut zip_uint16_t,
        arg5: *mut zip_uint16_t,
        arg6: zip_flags_t,
    ) -> *const zip_uint8_t;
}
extern "C" {
    pub fn zip_file_extra_field_get_by_id(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: zip_uint16_t,
        arg4: zip_uint16_t,
        arg5: *mut zip_uint16_t,
        arg6: zip_flags_t,
    ) -> *const zip_uint8_t;
}
extern "C" {
    pub fn zip_file_get_comment(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: *mut zip_uint32_t,
        arg4: zip_flags_t,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn zip_file_get_error(arg1: *mut zip_file_t) -> *mut zip_error_t;
}
extern "C" {
    pub fn zip_file_get_external_attributes(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: zip_flags_t,
        arg4: *mut zip_uint8_t,
        arg5: *mut zip_uint32_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_file_rename(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: *const ::std::os::raw::c_char,
        arg4: zip_flags_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_file_replace(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: *mut zip_source_t,
        arg4: zip_flags_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_file_set_comment(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: *const ::std::os::raw::c_char,
        arg4: zip_uint16_t,
        arg5: zip_flags_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_file_set_dostime(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: zip_uint16_t,
        arg4: zip_uint16_t,
        arg5: zip_flags_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_file_set_encryption(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: zip_uint16_t,
        arg4: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_file_set_external_attributes(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: zip_flags_t,
        arg4: zip_uint8_t,
        arg5: zip_uint32_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_file_set_mtime(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: time_t,
        arg4: zip_flags_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_file_strerror(arg1: *mut zip_file_t) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn zip_fopen(
        arg1: *mut zip_t,
        arg2: *const ::std::os::raw::c_char,
        arg3: zip_flags_t,
    ) -> *mut zip_file_t;
}
extern "C" {
    pub fn zip_fopen_encrypted(
        arg1: *mut zip_t,
        arg2: *const ::std::os::raw::c_char,
        arg3: zip_flags_t,
        arg4: *const ::std::os::raw::c_char,
    ) -> *mut zip_file_t;
}
extern "C" {
    pub fn zip_fopen_index(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: zip_flags_t,
    ) -> *mut zip_file_t;
}
extern "C" {
    pub fn zip_fopen_index_encrypted(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: zip_flags_t,
        arg4: *const ::std::os::raw::c_char,
    ) -> *mut zip_file_t;
}
extern "C" {
    pub fn zip_fread(
        arg1: *mut zip_file_t,
        arg2: *mut ::std::os::raw::c_void,
        arg3: zip_uint64_t,
    ) -> zip_int64_t;
}
extern "C" {
    pub fn zip_fseek(
        arg1: *mut zip_file_t,
        arg2: zip_int64_t,
        arg3: ::std::os::raw::c_int,
    ) -> zip_int8_t;
}
extern "C" {
    pub fn zip_ftell(arg1: *mut zip_file_t) -> zip_int64_t;
}
extern "C" {
    pub fn zip_get_archive_comment(
        arg1: *mut zip_t,
        arg2: *mut ::std::os::raw::c_int,
        arg3: zip_flags_t,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn zip_get_archive_flag(
        arg1: *mut zip_t,
        arg2: zip_flags_t,
        arg3: zip_flags_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_get_name(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: zip_flags_t,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn zip_get_num_entries(arg1: *mut zip_t, arg2: zip_flags_t) -> zip_int64_t;
}
extern "C" {
    pub fn zip_libzip_version() -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn zip_name_locate(
        arg1: *mut zip_t,
        arg2: *const ::std::os::raw::c_char,
        arg3: zip_flags_t,
    ) -> zip_int64_t;
}
extern "C" {
    pub fn zip_open(
        arg1: *const ::std::os::raw::c_char,
        arg2: ::std::os::raw::c_int,
        arg3: *mut ::std::os::raw::c_int,
    ) -> *mut zip_t;
}
extern "C" {
    pub fn zip_open_from_source(
        arg1: *mut zip_source_t,
        arg2: ::std::os::raw::c_int,
        arg3: *mut zip_error_t,
    ) -> *mut zip_t;
}
extern "C" {
    pub fn zip_register_progress_callback_with_state(
        arg1: *mut zip_t,
        arg2: f64,
        arg3: zip_progress_callback,
        arg4: ::std::option::Option<unsafe extern "C" fn(arg1: *mut ::std::os::raw::c_void)>,
        arg5: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_register_cancel_callback_with_state(
        arg1: *mut zip_t,
        arg2: zip_cancel_callback,
        arg3: ::std::option::Option<unsafe extern "C" fn(arg1: *mut ::std::os::raw::c_void)>,
        arg4: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_set_archive_comment(
        arg1: *mut zip_t,
        arg2: *const ::std::os::raw::c_char,
        arg3: zip_uint16_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_set_archive_flag(
        arg1: *mut zip_t,
        arg2: zip_flags_t,
        arg3: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
